# temporal_demo_for_analysis_workflow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
hooks/: pre-push
script/: README.md  sample_payload.json  trigger_analysis_workflow.py  trigger_proxy_workflow.py  worker.py
test/: README.md  conftest.py  test_activities.py  test_analysis_activities.py  test_analysis_workflow.py  test_proxy_activities.py  test_proxy_workflow.py
workflows/: __init__.py  activities.py  analysis_workflow.py  models.py  proxy_activities.py  proxy_workflow.py
workflows/activities/: analysis_activities.py  proxy_activities.py
